# just-enuf-pm

./: .gitignore  README.md  handoff.md  pyproject.toml  shareable.env
app/: __init__.py  config.py  db.py  main.py
app/api/: deps.py  errors.py  router.py
app/api/routes/: agents.py  comments.py  entity_assets.py  panic_stop.py  project_properties.py  projects.py  skill_defaults.py  tags.py  task_properties.py  task_types.py  tasks.py
app/models/: __init__.py  agent.py  attachment.py  comment.py  dependency.py  mixins.py  note.py  project.py  project_property.py  project_repo_link.py  skill_default.py  tag.py  task.py  task_property.py  task_type.py
app/schemas/: agent.py  attachment.py  comment.py  common.py  dependency.py  note.py  project.py  project_property.py  project_repo_link.py  skill_default.py  tag.py  task.py  task_property.py  task_type.py
app/scripts/: __init__.py  init_db.py  reset_db.py  seed_defaults.py
app/services/: agents.py  base.py  comments.py  dependencies.py  entity_assets.py  panic_stop.py  project_properties.py  project_repo_links.py  projects.py  skill_defaults.py  tags.py  task_properties.py  task_type_templates.py  task_types.py  tasks.py  utils.py
docs/: api.md  architecture.md  decisions.md  git-integration-plan.md
ui/: README.md  index.html  package-lock.json  package.json  pending.md  vite.config.js
ui/src/: App.jsx  api.js  constants.js  styles.css
ui/src/components/: AgentsConfigScreen.jsx  HookScriptsConfigScreen.jsx  OrchestratorConfigScreen.jsx  ProjectFlowView.jsx  SecretsConfigScreen.jsx  SkillsConfigScreen.jsx
